--- a/doit/Base.lproj/Main.storyboard
+++ b/doit/Base.lproj/Main.storyboard
@@ -1,24 +1,135 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sRt-bS-01f">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Do it-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="TaskViewController" customModule="doit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oB7-YW-gVr">
+                                <rect key="frame" x="-9" y="183" width="375" height="272"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="oB7-YW-gVr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0QC-XN-VGf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oB7-YW-gVr" secondAttribute="trailing" id="2NO-tj-cXo"/>
+                            <constraint firstItem="oB7-YW-gVr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ciQ-OE-OYF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oB7-YW-gVr" secondAttribute="bottom" constant="331" id="js0-3E-SKT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Do it" id="RHn-Ro-NNi">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="AW8-to-lcj"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ngm-Y1-IyX">
+                            <connections>
+                                <action selector="addItem:" destination="BYZ-38-t0r" id="5wB-ID-JRR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="doit" destination="oB7-YW-gVr" id="Wja-OY-M0g"/>
+                        <segue destination="IxD-7U-t3V" kind="show" identifier="addSegue" id="Mda-18-gp4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="684" y="172"/>
+        </scene>
+        <!--Add Task View Controller-->
+        <scene sceneID="hCE-ub-Kuz">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="IxD-7U-t3V" customClass="addTaskViewController" customModule="doit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FNs-Sc-beM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cvb-bu-eyy">
+                                <rect key="frame" x="159" y="84" width="57" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ICj-uB-AyR">
+                                <rect key="frame" x="25" y="119" width="325" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mbv-K6-7Go">
+                                <rect key="frame" x="150" y="190" width="75" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sx9-5A-C9b">
+                                <rect key="frame" x="163" y="225" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mPX-Pb-vKE">
+                                <rect key="frame" x="173" y="283" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addtask:" destination="IxD-7U-t3V" eventType="touchUpInside" id="6vA-QF-cLx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cvb-bu-eyy" firstAttribute="top" secondItem="rIs-b8-Zla" secondAttribute="top" constant="20" id="0jM-6x-WoH"/>
+                            <constraint firstItem="rIs-b8-Zla" firstAttribute="trailing" secondItem="ICj-uB-AyR" secondAttribute="trailing" constant="25" id="1KC-Ct-dMe"/>
+                            <constraint firstItem="ICj-uB-AyR" firstAttribute="top" secondItem="cvb-bu-eyy" secondAttribute="bottom" constant="14" id="3r7-hq-1sp"/>
+                            <constraint firstItem="mPX-Pb-vKE" firstAttribute="top" secondItem="Sx9-5A-C9b" secondAttribute="bottom" constant="27" id="ADr-Qx-Ucx"/>
+                            <constraint firstItem="mPX-Pb-vKE" firstAttribute="centerX" secondItem="FNs-Sc-beM" secondAttribute="centerX" id="PuL-aj-lpP"/>
+                            <constraint firstItem="cvb-bu-eyy" firstAttribute="centerX" secondItem="FNs-Sc-beM" secondAttribute="centerX" id="Tfd-Ne-eae"/>
+                            <constraint firstItem="mbv-K6-7Go" firstAttribute="top" secondItem="ICj-uB-AyR" secondAttribute="bottom" constant="41" id="Vjn-Wu-wmn"/>
+                            <constraint firstItem="Sx9-5A-C9b" firstAttribute="top" secondItem="mbv-K6-7Go" secondAttribute="bottom" constant="14" id="aWR-E1-igq"/>
+                            <constraint firstItem="ICj-uB-AyR" firstAttribute="top" secondItem="cvb-bu-eyy" secondAttribute="bottom" constant="14" id="d4t-Sa-6JP"/>
+                            <constraint firstItem="ICj-uB-AyR" firstAttribute="centerX" secondItem="FNs-Sc-beM" secondAttribute="centerX" id="dc0-FO-tli"/>
+                            <constraint firstItem="Sx9-5A-C9b" firstAttribute="centerX" secondItem="FNs-Sc-beM" secondAttribute="centerX" id="jeb-C0-gFp"/>
+                            <constraint firstItem="mbv-K6-7Go" firstAttribute="centerX" secondItem="FNs-Sc-beM" secondAttribute="centerX" id="n0z-c6-Rcx"/>
+                            <constraint firstItem="ICj-uB-AyR" firstAttribute="leading" secondItem="rIs-b8-Zla" secondAttribute="leading" constant="25" id="uBe-oq-ixO"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rIs-b8-Zla"/>
+                    </view>
+                    <connections>
+                        <outlet property="importantornot" destination="Sx9-5A-C9b" id="7lJ-s2-wcd"/>
+                        <outlet property="taskName" destination="ICj-uB-AyR" id="0Qo-FF-xjd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="weH-Lh-aGj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1498" y="172"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8JH-db-Sjz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sRt-bS-01f" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hci-Ts-EDd">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ANl-2Z-EEX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bzR-lB-mpV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-140" y="171"/>
         </scene>
     </scenes>
 </document>
