--- a/doit/Base.lproj/Main.storyboard
+++ b/doit/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oB7-YW-gVr">
-                                <rect key="frame" x="-9" y="183" width="375" height="272"/>
+                                <rect key="frame" x="0.0" y="182" width="375" height="272"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -43,6 +43,7 @@
                     <connections>
                         <outlet property="doit" destination="oB7-YW-gVr" id="Wja-OY-M0g"/>
                         <segue destination="IxD-7U-t3V" kind="show" identifier="addSegue" id="Mda-18-gp4"/>
+                        <segue destination="aLx-lp-Hmf" kind="show" identifier="showCompleteTask" id="3Ei-38-C2g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -112,6 +113,45 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="weH-Lh-aGj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1498" y="172"/>
+        </scene>
+        <!--Complete Task View Controller-->
+        <scene sceneID="bjr-9N-z0o">
+            <objects>
+                <viewController id="aLx-lp-Hmf" customClass="CompleteTaskViewController" customModule="doit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8S8-Hb-gCx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHu-r9-Gth">
+                                <rect key="frame" x="149" y="114" width="78" height="39.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DRW-tu-7Vr">
+                                <rect key="frame" x="149" y="173.5" width="76" height="30"/>
+                                <state key="normal" title="Completed"/>
+                                <connections>
+                                    <action selector="deleteTasks:" destination="aLx-lp-Hmf" eventType="touchUpInside" id="Z1k-7i-nb2"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gHu-r9-Gth" firstAttribute="centerX" secondItem="8S8-Hb-gCx" secondAttribute="centerX" id="7Qv-NS-1gU"/>
+                            <constraint firstItem="gHu-r9-Gth" firstAttribute="top" secondItem="7uR-HH-D7Y" secondAttribute="top" constant="50" id="PLU-8q-ebK"/>
+                            <constraint firstItem="DRW-tu-7Vr" firstAttribute="top" secondItem="gHu-r9-Gth" secondAttribute="bottom" constant="20" id="cfz-IV-yIl"/>
+                            <constraint firstItem="DRW-tu-7Vr" firstAttribute="centerX" secondItem="8S8-Hb-gCx" secondAttribute="centerX" id="rxn-0D-cox"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7uR-HH-D7Y"/>
+                    </view>
+                    <connections>
+                        <outlet property="labelText" destination="gHu-r9-Gth" id="GbE-D8-cHh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ziJ-aG-Erg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1249" y="1235"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8JH-db-Sjz">
